have CoreClasses deriving, monad deriving, and MonadCatch and MonadPlus laws, with error_t fully proved. wahoooooo.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-PACKAGES   := CoreData CoreClasses Categories Data Deriving
+PACKAGES   := CoreData CoreClasses Categories DerivingEverything DerivingMonad Data
 FILES      := $(foreach pkg,$(PACKAGES),$(patsubst %.v,%,$(wildcard $(pkg)/*.v))) \
 	            $(patsubst %.v,%,$(wildcard *.v))
 SOURCES    := $(FILES:%=%.v) 
